// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode acp --help 1`] = `
"deepagent-code acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: deepagent-code.local)
                                                          [string] [default: "deepagent-code.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode mcp --help 1`] = `
"deepagent-code mcp

manage MCP (Model Context Protocol) servers

Commands:
  deepagent-code mcp add [name]     add an MCP server
  deepagent-code mcp remove <name>  remove an MCP server from the project or global config
                                                                                       [aliases: rm]
  deepagent-code mcp edit <name>    edit an existing MCP server's configuration
                                    (url/env/header/command)
  deepagent-code mcp list           list MCP servers and their status                  [aliases: ls]
  deepagent-code mcp catalog        list preset MCP servers from the vetted catalog (metadata only)
  deepagent-code mcp auth [name]    authenticate with an OAuth-enabled MCP server
  deepagent-code mcp logout [name]  remove OAuth credentials for an MCP server
  deepagent-code mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode attach --help 1`] = `
"deepagent-code attach <url>

attach to a running deepagent-code server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dir         directory to run in                                                     [string]
  -c, --continue    continue the last session                                              [boolean]
  -s, --session     session id to continue                                                  [string]
      --fork        fork the session when continuing (use with --continue or --session)    [boolean]
  -p, --password    basic auth password (defaults to DEEPAGENT_CODE_SERVER_PASSWORD)        [string]
  -u, --username    basic auth username (defaults to DEEPAGENT_CODE_SERVER_USERNAME or
                    'deepagent-code')                                                       [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode run --help 1`] = `
"deepagent-code run [message..]

run deepagent-code with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --command                       the command to run, use message for args              [string]
      --goal                          start the message or existing goal+plan.md as a Goal Loop
                                      (requires --agent loop)             [boolean] [default: false]
  -c, --continue                      continue the last session                            [boolean]
  -s, --session                       session id to continue                                [string]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                           [boolean]
      --share                         share the session                                    [boolean]
  -m, --model                         model to use in the format of provider/model          [string]
      --agent                         agent to use                                          [string]
      --format                        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          file(s) to attach to message                           [array]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [string]
      --attach                        attach to a running deepagent-code server (e.g.,
                                      http://localhost:4096)                                [string]
  -p, --password                      basic auth password (defaults to
                                      DEEPAGENT_CODE_SERVER_PASSWORD)                       [string]
  -u, --username                      basic auth username (defaults to
                                      DEEPAGENT_CODE_SERVER_USERNAME or 'deepagent-code')   [string]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [string]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                             [number]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [string]
      --thinking                      show thinking blocks                                 [boolean]
      --replay                        replay interactive session history on resume and after resize
                                      (use --no-replay to disable)         [boolean] [default: true]
      --replay-limit                  cap visible interactive replay to the newest N messages
                                                                                            [number]
  -i, --interactive                   run in direct interactive split-footer mode
                                                                          [boolean] [default: false]
      --dangerously-skip-permissions  alias for --permission-mode full-access: auto-approve
                                      permissions not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --permission-mode               permission auto-response mode: request rejects every prompt,
                                      read-only rejects mutating tools
                                      (edit/write/patch/bash/task/external_directory) and approves
                                      the rest, full-access approves everything (dangerous!)
                                           [string] [choices: "request", "read-only", "full-access"]
      --question-answer               answer unattended Question prompts in order; repeat once per
                                      question (otherwise auto-reject)                       [array]
      --demo                          enable direct interactive demo slash commands; pass one as the
                                      message to run it immediately       [boolean] [default: false]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode debug --help 1`] = `
"deepagent-code debug

debugging and troubleshooting tools

Commands:
  deepagent-code debug config        show resolved configuration
  deepagent-code debug lsp           LSP debugging utilities
  deepagent-code debug rg            ripgrep debugging utilities
  deepagent-code debug file          file system debugging utilities
  deepagent-code debug scrap         list all known projects
  deepagent-code debug skill         list all available skills
  deepagent-code debug snapshot      snapshot debugging utilities
  deepagent-code debug startup       print startup timing
  deepagent-code debug agent <name>  show agent configuration details
  deepagent-code debug v2            debug v2 catalog and built-in plugins
  deepagent-code debug info          show debug information
  deepagent-code debug paths         show global paths (data, config, cache, state)
  deepagent-code debug logs          package recent logs into a zip for troubleshooting
  deepagent-code debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode providers --help 1`] = `
"deepagent-code providers

manage AI providers and credentials

Commands:
  deepagent-code providers list               list providers and credentials           [aliases: ls]
  deepagent-code providers login [url]        log in to a provider
  deepagent-code providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode agent --help 1`] = `
"deepagent-code agent

manage agents

Commands:
  deepagent-code agent create  create a new agent
  deepagent-code agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode upgrade --help 1`] = `
"deepagent-code upgrade [target]

upgrade deepagent-code to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode uninstall --help 1`] = `
"deepagent-code uninstall

uninstall deepagent-code and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode serve --help 1`] = `
"deepagent-code serve

starts a headless deepagent-code server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: deepagent-code.local)
                                                          [string] [default: "deepagent-code.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --register     register this server with the local CLI daemon (writes state/server.json)
                                                                          [boolean] [default: false]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode web --help 1`] = `
"deepagent-code web

start deepagent-code server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: deepagent-code.local)
                                                          [string] [default: "deepagent-code.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode models --help 1`] = `
"deepagent-code models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode stats --help 1`] = `
"deepagent-code stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode export --help 1`] = `
"deepagent-code export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode import --help 1`] = `
"deepagent-code import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode github --help 1`] = `
"deepagent-code github

manage GitHub agent

Commands:
  deepagent-code github install  install the GitHub agent
  deepagent-code github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode pr --help 1`] = `
"deepagent-code pr <number>

fetch and checkout a GitHub PR branch, then run deepagent-code

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode session --help 1`] = `
"deepagent-code session

manage sessions

Commands:
  deepagent-code session list                        list sessions
  deepagent-code session delete <sessionID>          delete a session
  deepagent-code session rename <sessionID> <title>  rename a session
  deepagent-code session archive <sessionID>         archive a session (or restore it with --undo)
  deepagent-code session export-context <sessionID>  copy/export a session's recovery context (works
                                                     when the store is in read-only recovery)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode plugin --help 1`] = `
"deepagent-code plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode db --help 1`] = `
"deepagent-code db

database tools

Commands:
  deepagent-code db [query]     open an interactive sqlite3 shell or run a query           [default]
  deepagent-code db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode goal --help 1`] = `
"deepagent-code goal

inspect and control the goal loop of a session

Commands:
  deepagent-code goal status <sessionID>  show the active goal of a session
  deepagent-code goal pause <sessionID>   pause the goal loop of a session
  deepagent-code goal resume <sessionID>  resume the goal loop of a session
  deepagent-code goal stop <sessionID>    stop the goal loop of a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode worktree --help 1`] = `
"deepagent-code worktree

manage git worktrees for the current project

Commands:
  deepagent-code worktree list                list worktrees of the current project    [aliases: ls]
  deepagent-code worktree create              create a new worktree
  deepagent-code worktree remove <directory>  remove a worktree (fail-closed unless --force)
                                                                                       [aliases: rm]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode oversight --help 1`] = `
"deepagent-code oversight

inspect the agent oversight plane (approvals, metrics)

Commands:
  deepagent-code oversight list     list pending approval queue items                  [aliases: ls]
  deepagent-code oversight metrics  show oversight metrics (DLQ, success rate, conflict rate)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode panel --help 1`] = `
"deepagent-code panel

inspect the Expert Panel state

Commands:
  deepagent-code panel status <sessionID>  show the effective Expert Panel armed state for a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode review --help 1`] = `
"deepagent-code review

inspect DeepAgent run reviews

Commands:
  deepagent-code review list  list recent DeepAgent run reviews                        [aliases: ls]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode wiki --help 1`] = `
"deepagent-code wiki

browse and search the project Wiki

Commands:
  deepagent-code wiki list           list Wiki pages                                   [aliases: ls]
  deepagent-code wiki search <text>  full-text search over the Wiki

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode packs --help 1`] = `
"deepagent-code packs

inspect domain packs

Commands:
  deepagent-code packs list  list active domain packs (or the full catalog with --all) [aliases: ls]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode mcp list --help 1`] = `
"deepagent-code mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode mcp add --help 1`] = `
"deepagent-code mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode mcp auth --help 1`] = `
"deepagent-code mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  deepagent-code mcp auth list  list OAuth-capable MCP servers and their auth status   [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode mcp logout --help 1`] = `
"deepagent-code mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode providers list --help 1`] = `
"deepagent-code providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode providers login --help 1`] = `
"deepagent-code providers login [url]

log in to a provider

Positionals:
  url  deepagent-code auth provider                                                         [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode providers logout --help 1`] = `
"deepagent-code providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode agent create --help 1`] = `
"deepagent-code agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode agent list --help 1`] = `
"deepagent-code agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode session list --help 1`] = `
"deepagent-code session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode session delete --help 1`] = `
"deepagent-code session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode session rename --help 1`] = `
"deepagent-code session rename <sessionID> <title>

rename a session

Positionals:
  sessionID  session ID to rename                                                [string] [required]
  title      new title for the session                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode session archive --help 1`] = `
"deepagent-code session archive <sessionID>

archive a session (or restore it with --undo)

Positionals:
  sessionID  session ID to archive                                               [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --undo        restore an archived session                           [boolean] [default: false]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode mcp edit --help 1`] = `
"deepagent-code mcp edit <name>

edit an existing MCP server's configuration (url/env/header/command)

Positionals:
  name  name of the MCP server                                                   [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         new URL for a remote MCP server                                         [string]
      --env         environment variable for a local MCP server (KEY=VALUE, merged)          [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE, merged)                  [array]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode goal status --help 1`] = `
"deepagent-code goal status <sessionID>

show the active goal of a session

Positionals:
  sessionID  session ID                                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode goal pause --help 1`] = `
"deepagent-code goal pause <sessionID>

pause the goal loop of a session

Positionals:
  sessionID  session ID                                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode goal resume --help 1`] = `
"deepagent-code goal resume <sessionID>

resume the goal loop of a session

Positionals:
  sessionID  session ID                                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode goal stop --help 1`] = `
"deepagent-code goal stop <sessionID>

stop the goal loop of a session

Positionals:
  sessionID  session ID                                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode worktree list --help 1`] = `
"deepagent-code worktree list

list worktrees of the current project

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode worktree create --help 1`] = `
"deepagent-code worktree create

create a new worktree

Options:
  -h, --help           show help                                                           [boolean]
  -v, --version        show version number                                                 [boolean]
      --print-logs     print logs to stderr                                                [boolean]
      --log-level      log level                [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure           run without external plugins                                        [boolean]
      --attach         attach to a running server (e.g. http://localhost:4096)              [string]
      --password       password for the attached server                                     [string]
      --username       username for the attached server                                     [string]
      --format         output format          [string] [choices: "table", "json"] [default: "table"]
      --name           worktree/branch name (default: auto-generated)                       [string]
      --start-command  additional startup script to run after the project's start command   [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode worktree remove --help 1`] = `
"deepagent-code worktree remove <directory>

remove a worktree (fail-closed unless --force)

Positionals:
  directory  worktree directory to remove                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --force       remove even if the worktree has uncommitted changes   [boolean] [default: false]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode oversight list --help 1`] = `
"deepagent-code oversight list

list pending approval queue items

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode oversight metrics --help 1`] = `
"deepagent-code oversight metrics

show oversight metrics (DLQ, success rate, conflict rate)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
      --from        window start (epoch ms)                                                 [string]
      --to          window end (epoch ms)                                                   [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode panel status --help 1`] = `
"deepagent-code panel status <sessionID>

show the effective Expert Panel armed state for a session

Positionals:
  sessionID  session ID                                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode review list --help 1`] = `
"deepagent-code review list

list recent DeepAgent run reviews

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode wiki list --help 1`] = `
"deepagent-code wiki list

list Wiki pages

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
      --type        filter by page type                                                     [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode wiki search --help 1`] = `
"deepagent-code wiki search <text>

full-text search over the Wiki

Positionals:
  text  search text                                                              [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --type        filter by page type                                                     [string]
      --scope       filter by scope                                                         [string]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode packs list --help 1`] = `
"deepagent-code packs list

list active domain packs (or the full catalog with --all)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --attach      attach to a running server (e.g. http://localhost:4096)                 [string]
      --password    password for the attached server                                        [string]
      --username    username for the attached server                                        [string]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
      --all         show the full installed catalog instead of the active set
                                                                          [boolean] [default: false]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode github install --help 1`] = `
"deepagent-code github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode github run --help 1`] = `
"deepagent-code github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`deepagentCode CLI help-text snapshots every documented command emits stable help text: deepagentCode db path --help 1`] = `
"deepagent-code db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
